# Legolas

./: CMakeLists.txt  FindTBB.cmake  License.md  README.md  goRelease.sh
Legolas/: .own_inc  Allocator.hxx  CMakeLists.txt  EigenInterface.hxx
Legolas/Algorithm/: ATLASDenseMatrixMatrixProduct.hxx  ATLASDenseMatrixVectorProduct.hxx  AnySolver.hxx  AssignCopyTraits.hxx  BandMatrixInversionByGaussSeidelAlgorithm.hxx  BandedMatrixVectorProduct.hxx  BlockLinearSolverTraits.hxx  CBlasGemvTraits.hxx  ComputeLinearSystemResidual.hxx  DRMatrixVectorProduct.hxx  DRRSolver.hxx  DefaultInversePowerIterationControl.hxx  DefaultIterativeLinearSystemControl.hxx  DefaultLinearSystemIterationControl.hxx  DenseDRMatrixInversionByDLAlgorithm.hxx  DenseDRMatrixInversionByGaussSeidelAlgorithm.hxx  DenseMatrixVectorProduct.hxx  DiagonalMatrixInversion.hxx  DiagonalMatrixInversionTBB.hxx  DiagonalMatrixVectorProduct.hxx  DiagonalMatrixVectorProductSSE.hxx  DiagonalMatrixVectorProductTBB.hxx  EigenDenseMatrixMatrixProduct.hxx  InverseDenseMatrixByGaussJordanAlgorithm.hxx  InversePowerNonAcceleration.hxx  IterationControl.hxx  IterativeLinearSystemTchebychevAcceleration.hxx  LinearSolve.hxx  LinearSolver.hxx  LinearSolverWorkSpace.hxx  LinearSystemInversionByIterativeMNAlgorithm.hxx  MNMatrixIterativeInversionAlgorithm.hxx  MNMatrixVectorProduct.hxx  NoInverse.hxx  NoInversePowerAcceleration.hxx  NoInversionAlgorithm.hxx  NoIterativeLinearSystemAcceleration.hxx  NoLinearSystemAcceleration.hxx  NonPreconditionedLinearBiConjugateGradientAlgorithm.hxx  NonPreconditionedLinearConjugateGradientAlgorithm.hxx  (+26 more)
Legolas/Array/: #Array.hxx#  .#Array.hxx  Array.hxx  ArrayShape.hxx  BaseArray.hxx  CMakeLists.txt  Expression.hxx  ForEach.hxx  Map.hxx  Reductions.hxx  shape.hxx  toto  vector.hxx
Legolas/Array/Block/: BaseBlock.hxx  Block.hxx  BlockExpression.hxx
Legolas/BlockMatrix/: AdaptivePreconditionedConjugateGradientSolver.cxx  AdaptivePreconditionedConjugateGradientSolver.hxx  BiCGStabSolver.cxx  BiCGStabSolver.hxx  BlockProfile.hxx  CMakeLists.txt  ConjugateGradientSolver.cxx  ConjugateGradientSolver.hxx  EnforcedPreconditionedConjugateGradientSolver.cxx  EnforcedPreconditionedConjugateGradientSolver.hxx  IterationControler.hxx  Matrix.cxx  Matrix.hxx  MatrixMultOperator.hxx  MatrixOperator.hxx  MatrixSolver.hxx  PreconditionedConjugateGradientSolver.cxx  PreconditionedConjugateGradientSolver.hxx  Profile.hxx  RestartedConjugateGradientSolver.cxx  RestartedConjugateGradientSolver.hxx  RestartedPreconditionedConjugateGradientSolver.cxx  RestartedPreconditionedConjugateGradientSolver.hxx  RobustPreconditionedConjugateGradientSolver.cxx  RobustPreconditionedConjugateGradientSolver.hxx  ScalarMatrixMultOperator.hxx  ScalarMatrixSolver.hxx  StaticMatrixMultOperator.hxx  StaticMatrixSolver.hxx  SteepestDescentMinResSolver.cxx  SteepestDescentMinResSolver.hxx  SteepestDescentSolver.cxx  SteepestDescentSolver.hxx  VirtualMultOperator.hxx  VirtualSolver.cxx  VirtualSolver.hxx
Legolas/BlockMatrix/Structures/: CMakeLists.txt
Legolas/BlockMatrix/tst/: CMakeLists.txt  LegolasTestSolver.hxx
Legolas/Common/: BasicTypes.hxx
Legolas/Matrix/: BlocKRecursiveTraversal.hxx  BlockRecursiveTraversal.hxx  CMakeLists.txt  DisplayHTML.hxx  DisplayLatex.hxx  DisplayPNG.hxx  IterateOverBlocks.hxx  LatexMatrixStream.hxx  MatrixDefinition.hxx  MatrixMatrixOperation.hxx  MatrixShape.hxx  MatrixSkin.hxx  MatrixStream.hxx  MatrixVectorOperations.hxx  OwnerShipPolicy.hxx  PNGMatrixStream.hxx  PlusEqualProduct.hxx  PolymorphicMatrix.hxx  PolymorphicMatrixInterface.hxx  SVGHeader.hxx  SVGMatrixStream.hxx  VirtualMatrixShape.hxx  iterateOverBlocks.hxx  textopdf.sh
Legolas/Matrix/ActualMatrix/: ActualFromVirtualMatrixInterface.hxx  ActualMatrixCopy.hxx  ActualMatrixDataDriverTraits.hxx  (+3 more)
Legolas/MultiArray/: CMakeLists.txt  MultiArray.hxx  MultiArrayMatrixShape.hxx  MultiArrayShape.hxx
Legolas/StaticArray/: StaticArray.hxx
Legolas/Vector/: Backtrace.hxx  BaseMatrix.hxx  BaseVector.hxx  BuildLevelSizes.hxx  CMakeLists.txt  EigenInterface.hxx  Exception.hxx  FlatMultiVector.hxx  FlatRecursiveTraits.hxx  ForAll.hxx  RectangularMultiVector.hxx  RecursiveTraits.hxx  TinyEigenInterface.hxx  Vector.hxx  VectorDoc.dox  VectorPool.hxx  VectorUserMan.dox  VirtualVector.hxx  vectorDoxyFile
Legolas/include/: Debug.hxx  SingletonTimerTable.hxx  TBBTL_Timer.hxx  UTILITES.hxx  X86Timer.cxx  X86Timer.hxx  dkconfig.hxx  my_tbb_parallel_for.hxx  stringConvert.hxx
doc/: .gitignore
tst/: CMakeLists.txt
tst/ImageFilter/: CMakeLists.txt  ImageFilter.cxx  bitmap_image.hpp  dumpBMP.hxx
tst/MultiPrec/: CMakeLists.txt  MultiPrec.cxx  plotBench.py  thomassolver.hxx
tst/MultiThomas/: CMakeLists.txt  MultiThomas.cxx  helper.hxx  plotBench.py  plotPerf.py  plotPerfLDL.py  plotPerfLaplacian.py  plotSpeedUp.py
tst/MultiThomasExample/: CMakeLists.txt  MultiThomasExample.cxx
tst/StaticArrays/: CMakeLists.txt  StaticArrays.cxx
tst/TensorTranspose/: CMakeLists.txt  TensorTranspose.cxx
(+438 files in other folders)
